FIX: Blog post author name box, image size and border alignment

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1598,11 +1598,16 @@ ul.meta-post li a {
 
 /* --- single post --- */
 
+.date {
+    float: right;
+    font-weight: bold;
+}
+
 .bottom-article {
   border-top: 1px solid #e9e9e9;
   border-bottom: 1px solid #e9e9e9;
   padding: 10px 0 10px 0;
-  margin-top: 20px;
+  margin-top: 40px;
 
     // bootstrap rows have 30px margin at the bottom
     margin-bottom: 0px;
@@ -1628,6 +1633,19 @@ ul.meta-post li a {
             border: 1px solid #d5d5d5;
         }
     }
+}
+
+// remove the row col row col margins, for alignment purposes
+.thumbnail-container.col, .thumbnail-container.col-2, .thumbnail-container.col-sm-2 {
+    padding-left:0px;
+    //margin-left: 15px;
+    padding-right: 0px;
+}
+
+// this fixes the column width mismatch when adding a border, with -15px margin offset by 15px padding
+.row.about-author {
+    margin-left:0px;
+    margin-right: 0px;
 }
 
 .about-author h5 {
